--- a/css/style.css
+++ b/css/style.css
@@ -38,8 +38,9 @@
     text-align: center;
     font-size: 90vh;
     color: #000;
-    font-weight: 700;
+    font-weight: 900;
     line-height: 100vh;
+    font-family: sans-serif;
 }
 
 #slider .slide.is-color {
@@ -69,4 +70,8 @@
 
 .carousel-item.active {
     opacity: 1;
+}
+
+#slider * {
+    user-select: none;
 }
