--- a/css/style.css
+++ b/css/style.css
@@ -84,7 +84,7 @@
     border: 0;
 }
 
-.modal-content #slider {
+.modal-content .slider {
     width: 100%;
     height: 100%;
 }
@@ -94,7 +94,7 @@
     z-index: 5;
 }
 
-#slider .slide {
+.slider .slide {
     text-align: center;
     font-size: 90vh;
     color: #000;
@@ -103,31 +103,31 @@
     font-family: sans-serif;
 }
 
-#slider .slide.is-color {
+.slider .slide.is-color {
     font-size: 0;
 }
 
-#slider .slide.is-color.is-red {
+.slider .slide.is-color.is-red {
     background-color: var(--bs-red);
 }
 
-#slider .slide.is-color.is-yellow {
+.slider .slide.is-color.is-yellow {
     background-color: var(--bs-yellow);
 }
 
-#slider .slide.is-color.is-green {
+.slider .slide.is-color.is-green {
     background-color: var(--bs-green);
 }
 
-#slider .slide.is-color.is-blue {
+.slider .slide.is-color.is-blue {
     background-color: var(--bs-blue);
 }
 
-#slider .slide.is-color.is-orange {
+.slider .slide.is-color.is-orange {
     background-color: var(--bs-orange);
 }
 
-#slider .slide.is-color.is-purple {
+.slider .slide.is-color.is-purple {
     background-color: var(--bs-purple);
 }
 
@@ -140,6 +140,6 @@
     opacity: 1;
 }
 
-#slider * {
+.slider * {
     user-select: none;
 }
