Added Play/Stop interaction

--- a/css/style.css
+++ b/css/style.css
@@ -44,9 +44,21 @@ body {
     height: 100%;
 }
 
-.modal .btn-close  {
-    position: relative;
+.modal .btn  {
+    position: fixed;
     z-index: 5;
+    left: 0;
+    right: 0;
+    margin: auto;
+    border-radius: 100%;
+}
+
+.modal .btn-close  {
+    top: 1rem;
+}
+
+.modal .btn-start  {
+    bottom: 1rem;
 }
 
 .slider .slide {
