--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,12 @@
 
 body {
     font-family: "Roboto", sans-serif;
+    -webkit-touch-callout: none !important;
+    -webkit-user-select: none !important;
+    -khtml-user-select: none !important;
+    -moz-user-select: none !important;
+    -ms-user-select: none !important;
+    user-select: none !important;
 }
 
 .btn-outline-dark[aria-expanded="true"] {
